--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -1,6 +1,6 @@
 header.log_in=\u0412\u043E\u0439\u0442\u0438
 header.sign_up=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
-header.sign_out=\u0412\u044B\u0439\u0442\u0438
+header.log_out=\u0412\u044B\u0439\u0442\u0438
 header.news=\u041D\u043E\u0432\u043E\u0441\u0442\u0438
 header.cars=\u041C\u0430\u0448\u0438\u043D\u044B
 header.about=\u041E20\u043D\u0430\u0441
