--- a/src/main/resources/content_be.properties
+++ b/src/main/resources/content_be.properties
@@ -3,7 +3,7 @@ header.sign_up=\u0417\u0430\u0440\u044D\u0433\u0456\u0441\u0442\u0440\u0430\u043
 header.log_out=\u0412\u044B\u0439\u0441\u0446\u0456
 header.news=\u041D\u0430\u0432\u0456\u043D\u044B
 header.cars=\u041C\u0430\u0448\u044B\u043D\u044B
-header.about=\u041F\u0440\u0430\20\u043D\u0430\u0441
+header.about=\u041F\u0440\u0430 \u043D\u0430\u0441
 login.email=Email
 login.password=\u041f\u0430\u0440\u043e\u043b\u044c
 login.log_in=\u041b\u0430\u0433\u0456\u043d
