added new features

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -8,3 +8,11 @@ login.email=Email
 login.password=Password
 login.log_in=Login
 login.error_message=Authorization error. Please try again.
+
+car.color=Color
+car.mileage=Mileage
+car.gearbox=Gear box
+car.engine=Engine
+car.class=Class
+car.year=Release year
+car.price=Price
