--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -8,3 +8,11 @@ login.email=Email
 login.password=\u041f\u0430\u0440\u043e\u043b\u044c
 login.log_in=\u041b\u043e\u0433\u0438\u043d
 login.error_message=\u041e\u0448\u0438\u0431\u043a\u0430 \u0430\u0432\u0442\u043e\u0440\u0438\u0437\u0430\u0446\u0438\u0438\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u043f\u043e\u043f\u0440\u043e\u0431\u0443\u0439\u0442\u0435 \u0435\u0449\u0451 \u0440\u0430\u0437\u002e
+
+car.color=Цвет
+car.mileage=Пробег
+car.gearbox=Коробка передач
+car.engine=Двигатель
+car.class=Class
+car.year=Год выпуска
+car.price=Цена
