--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -3,16 +3,18 @@ header.sign_up=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u044
 header.log_out=\u0412\u044B\u0439\u0442\u0438
 header.news=\u041D\u043E\u0432\u043E\u0441\u0442\u0438
 header.cars=\u041C\u0430\u0448\u0438\u043D\u044B
-header.about=\u041E20\u043D\u0430\u0441
+header.about=\u041E\u043D\u0430\u0441
 login.email=Email
-login.password=\u041f\u0430\u0440\u043e\u043b\u044c
-login.log_in=\u041b\u043e\u0433\u0438\u043d
-login.error_message=\u041e\u0448\u0438\u0431\u043a\u0430 \u0430\u0432\u0442\u043e\u0440\u0438\u0437\u0430\u0446\u0438\u0438\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u043f\u043e\u043f\u0440\u043e\u0431\u0443\u0439\u0442\u0435 \u0435\u0449\u0451 \u0440\u0430\u0437\u002e
+login.password=\u041F\u0430\u0440\u043E\u043B\u044C
+login.log_in=\u041B\u043E\u0433\u0438\u043D
+login.error_message=\u041E\u0448\u0438\u0431\u043A\u0430 \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u0438. \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u043F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u0435\u0449\u0451 \u0440\u0430\u0437.
 
-car.color=Цвет
-car.mileage=Пробег
-car.gearbox=Коробка передач
-car.engine=Двигатель
+admin.edit_news=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+
+car.color=\u0426\u0432\u0435\u0442
+car.mileage=\u041F\u0440\u043E\u0431\u0435\u0433
+car.gearbox=\u041A\u043E\u0440\u043E\u0431\u043A\u0430 \u043F\u0435\u0440\u0435\u0434\u0430\u0447
+car.engine=\u0414\u0432\u0438\u0433\u0430\u0442\u0435\u043B\u044C
 car.class=Class
-car.year=Год выпуска
-car.price=Цена
+car.year=\u0413\u043E\u0434 \u0432\u044B\u043F\u0443\u0441\u043A\u0430
+car.price=\u0426\u0435\u043D\u0430
