--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -8,6 +8,12 @@ login.email=Email
 login.password=Password
 login.log_in=Login
 login.error_message=Authorization error. Please try again.
+register.sign_up=Sign up
+register.email=Email
+register.password=Password
+register.error_message=Registration error. Please try again.
+admin.edit=Edit
+admin.delete=Delete
 
 car.color=Color
 car.mileage=Mileage
@@ -16,3 +22,5 @@ car.engine=Engine
 car.class=Class
 car.year=Release year
 car.price=Price
+car.order=Order
+admin.add_car=Add new car
