add ref to login/register

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -8,10 +8,12 @@ login.email=Email
 login.password=Password
 login.log_in=Login
 login.error_message=Authorization error. Please try again.
+login.no_account=Don't have an account?
 register.sign_up=Sign up
 register.email=Email
 register.password=Password
 register.error_message=Registration error. Please try again.
+register.have_account=Have an account?
 admin.edit=Edit
 admin.delete=Delete
 admin.add_car=Add new car
