add i18n for delete dialog

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -31,3 +31,6 @@ admin.submit=Submit
 admin.preview=Preview
 editor.header=Header
 editor.content=Content
+delete_dialog.message=Are you sure you want to delete this news?
+delete_dialog.yes=Yes
+delete_dialog.no=No
