add i18n for globe

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -1,3 +1,4 @@
+locale.be=Be
 header.log_in=Log in
 header.sign_up=Sign up
 header.log_out=Log out
@@ -34,3 +35,6 @@ editor.content=Content
 delete_dialog.message=Are you sure you want to delete this news?
 delete_dialog.yes=Yes
 delete_dialog.no=No
+locale.change_lang=Change language
+locale.ru=Ru
+locale.en=En
