add properties for Order

--- a/src/main/resources/content_be.properties
+++ b/src/main/resources/content_be.properties
@@ -37,3 +37,4 @@ delete_dialog.no=\u041D\u0435
 locale.change_lang=\u0417\u043C\u044F\u043D\u0456\u0446\u044C \u043C\u043E\u0432\u0443
 locale.ru=\u0420\u0443\u0441
 locale.en=\u0410\u043D\u0433\u043B
+header.orders=\u0417\u0430\u043A\u0430\u0437\u044B
