--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -38,3 +38,4 @@ delete_dialog.no=\u041D\u0435\u0442
 locale.change_lang=\u041F\u043E\u043C\u0435\u043D\u044F\u0442\u044C \u044F\u0437\u044B\u043A
 locale.ru=\u0420\u0443\u0441
 locale.en=\u0410\u043D\u0433\u043B
+header.orders=\u0417\u0430\u043A\u0430\u0437\u044B
