add properties for footer

--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -40,3 +40,4 @@ locale.ru=\u0420\u0443\u0441
 locale.en=\u0410\u043D\u0433\u043B
 header.orders=\u0417\u0430\u043A\u0430\u0437\u044B
 car.plate=\u041D\u043E\u043C\u0435\u0440\u043D\u043E\u0439 \u0437\u043D\u0430\u043A
+footer.administrator=\u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
