--- a/src/main/resources/content_be.properties
+++ b/src/main/resources/content_be.properties
@@ -39,3 +39,4 @@ locale.ru=\u0420\u0443\u0441
 locale.en=\u0410\u043D\u0433\u043B
 header.orders=\u0417\u0430\u043A\u0430\u0437\u044B
 car.plate=\u041D\u0443\u043C\u0430\u0440\u043D\u044B \u0437\u043D\u0430\u043A
+footer.administrator=\u0410\u0434\u043C\u0456\u043D\u0456\u0441\u0442\u0440\u0430\u0442\u0430\u0440
