--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -32,7 +32,7 @@ admin.submit=Submit
 admin.preview=Preview
 editor.header=Header
 editor.content=Content
-delete_dialog.message=Are you sure you want to delete this news?
+delete_dialog.message=Are you sure you want to delete this?
 delete_dialog.yes=Yes
 delete_dialog.no=No
 locale.change_lang=Change language
