--- a/src/main/resources/content_be.properties
+++ b/src/main/resources/content_be.properties
@@ -32,11 +32,13 @@ admin.preview=\u041F\u0430\u0433\u043B\u044F\u0434\u0437\u0435\u0446\u044C
 editor.header=\u0417\u0430\u0433\u0430\u043B\u043E\u0432\u0430\u043A
 editor.content=\u0417\u043C\u0435\u0441\u0442
 delete_dialog.message=\u0412\u044B \u045E\u043F\u044D\u045E\u043D\u0435\u043D\u044B\u044F, \u0448\u0442\u043E \u0436\u0430\u0434\u0430\u0435\u0446\u0435 \u0432\u044B\u0434\u0430\u043B\u0456\u0446\u044C \u0433\u044D\u0442\u0430?
-delete_dialog.yes=\u0414\u0430
-delete_dialog.no=\u041D\u0435
 locale.change_lang=\u0417\u043C\u044F\u043D\u0456\u0446\u044C \u043C\u043E\u0432\u0443
 locale.ru=\u0420\u0443\u0441
 locale.en=\u0410\u043D\u0433\u043B
 header.orders=\u0417\u0430\u043A\u0430\u0437\u044B
 car.plate=\u041D\u0443\u043C\u0430\u0440\u043D\u044B \u0437\u043D\u0430\u043A
 footer.administrator=\u0410\u0434\u043C\u0456\u043D\u0456\u0441\u0442\u0440\u0430\u0442\u0430\u0440
+register.first_name=\u0406\u043C\u044F
+register.second_name=\u041F\u0440\u043E\u0437\u0432\u0456\u0448\u0447\u0430
+register.middle_name=\u0406\u043C\u044F \u043F\u0430 \u0431\u0430\u0446\u044C\u043A\u0443
+register.phone_number=\u041D\u0443\u043C\u0430\u0440 \u0442\u044D\u043B\u0435\u0444\u043E\u043D\u0430
