--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -33,11 +33,13 @@ admin.preview=Preview
 editor.header=Header
 editor.content=Content
 delete_dialog.message=Are you sure you want to delete this?
-delete_dialog.yes=Yes
-delete_dialog.no=No
 locale.change_lang=Change language
 locale.ru=Ru
 locale.en=En
 header.orders=Orders
 car.plate=Plate
 footer.administrator=Administrator
+register.first_name=First name
+register.second_name=Second name
+register.middle_name=Middle name
+register.phone_number=Phone number
