--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -33,11 +33,13 @@ admin.preview=\u041F\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C
 editor.header=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 editor.content=\u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
 delete_dialog.message=\u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B, \u0447\u0442\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u0442\u043E?
-delete_dialog.yes=\u0414\u0430
-delete_dialog.no=\u041D\u0435\u0442
 locale.change_lang=\u041F\u043E\u043C\u0435\u043D\u044F\u0442\u044C \u044F\u0437\u044B\u043A
 locale.ru=\u0420\u0443\u0441
 locale.en=\u0410\u043D\u0433\u043B
 header.orders=\u0417\u0430\u043A\u0430\u0437\u044B
 car.plate=\u041D\u043E\u043C\u0435\u0440\u043D\u043E\u0439 \u0437\u043D\u0430\u043A
 footer.administrator=\u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
+register.first_name=\u0418\u043C\u044F
+register.second_name=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+register.middle_name=\u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
+register.phone_number=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
