--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -25,7 +25,7 @@ car.gearbox=Gear box
 car.engine=Engine
 car.class=Class
 car.year=Release year
-car.price=Price
+car.price=Price per day
 car.order=Order
 admin.add_news=Add news
 admin.submit=Submit
