--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -43,8 +43,8 @@ register.first_name=\u0418\u043C\u044F
 register.second_name=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
 register.middle_name=\u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
 register.phone_number=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
-order.passport_number=\u041D\u043E\u043C\u0435\u0440 \u043F\u0430\u0441\u043F\u043E\u0440\u0442\u0430
-order.identification_number=\u0418\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
-order.issue_date=\u0414\u0430\u0442\u0430 \u0432\u044B\u0434\u0430\u0447\u0438
+register.passport_number=\u041D\u043E\u043C\u0435\u0440 \u043F\u0430\u0441\u043F\u043E\u0440\u0442\u0430
+register.identification_number=\u0418\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
+register.issue_date=\u0414\u0430\u0442\u0430 \u0432\u044B\u0434\u0430\u0447\u0438
 order.start_date=\u041D\u0430\u0447\u0430\u043B\u043E \u0430\u0440\u0435\u043D\u0434\u044B
 order.end_date=\u041A\u043E\u043D\u0435\u0446 \u0430\u0440\u0435\u043D\u0434\u044B
