--- a/src/main/resources/content_be.properties
+++ b/src/main/resources/content_be.properties
@@ -47,3 +47,16 @@ register.identification_number=\u0406\u0434\u044D\u043D\u0442\u044B\u0444\u0456\
 register.issue_date=\u0414\u0430\u0442\u0430 \u0432\u044B\u0434\u0430\u0447\u044B
 order.start_date=\u041F\u0430\u0447\u0430\u0442\u0430\u043A \u0430\u0440\u044D\u043D\u0434\u044B
 order.end_date=\u041A\u0430\u043D\u0435\u0446 \u0430\u0440\u044D\u043D\u0434\u044B
+orders.new_status=\u041D\u043E\u0432\u044B
+orders.approved_status=\u0410\u0434\u043E\u0431\u0440\u0430\u043D\u0430
+orders.paid_status=\u0410\u043F\u043B\u0430\u0447\u0430\u043D\u0430
+orders.received_status=\u0410\u0442\u0440\u044B\u043C\u0430\u043D\u0430
+orders.cancelled_status=\u0410\u0434\u043C\u0435\u043D\u0435\u043D\u0430
+orders.returned_status=\u0412\u0435\u0440\u043D\u0443\u0442\u0430
+car.class_muscle=\u041C\u0430\u0441\u043B
+car.class_hatchback=\u0425\u044D\u0442\u0447\u0431\u0435\u043A
+car.class_pickup=\u041Fi\u043A\u0430\u043F
+car.class_sedan=\u0421\u0435\u0434\u0430\u043D
+car.class_sport=\u0421\u043F\u043E\u0440\u0442\u043A\u0430\u0440
+car.class_suv=\u041A\u0440\u043E\u0441\u043E\u0432\u0435\u0440
+car.class_wagon=\u0423\u043D\u0456\u0432\u0435\u0440\u0441\u0430\u043B
