--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -48,3 +48,16 @@ register.identification_number=Identification number
 register.issue_date=Issue date
 order.start_date=Start date
 order.end_date=End date
+orders.new_status=New
+orders.approved_status=Approved
+orders.paid_status=Paid
+orders.received_status=Received
+orders.cancelled_status=Cancelled
+orders.returned_status=Returned
+car.class_muscle=Muscle
+car.class_hatchback=Hatchback
+car.class_pickup=Pick-up
+car.class_sedan=Sedan
+car.class_sport=Sport
+car.class_suv=SUV
+car.class_wagon=Wagon
