--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -48,3 +48,16 @@ register.identification_number=\u0418\u0434\u0435\u043D\u0442\u0438\u0444\u0438\
 register.issue_date=\u0414\u0430\u0442\u0430 \u0432\u044B\u0434\u0430\u0447\u0438
 order.start_date=\u041D\u0430\u0447\u0430\u043B\u043E \u0430\u0440\u0435\u043D\u0434\u044B
 order.end_date=\u041A\u043E\u043D\u0435\u0446 \u0430\u0440\u0435\u043D\u0434\u044B
+orders.new_status=\u041D\u043E\u0432\u044B\u0439
+orders.approved_status=\u041E\u0434\u043E\u0431\u0440\u0435\u043D\u043E
+orders.paid_status=\u041E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
+orders.received_status=\u041F\u043E\u043B\u0443\u0447\u0435\u043D\u0430
+orders.cancelled_status=\u041E\u0442\u043C\u0435\u043D\u0435\u043D\u043E
+orders.returned_status=\u0412\u043E\u0437\u0432\u0440\u0430\u0449\u0435\u043D\u043E
+car.class_muscle=\u041C\u0430\u0441\u043B\u043A\u0430\u0440
+car.class_hatchback=\u0425\u044D\u0442\u0447\u0431\u0435\u043A
+car.class_pickup=\u041F\u0438\u043A\u0430\u043F
+car.class_sedan=\u0421\u0435\u0434\u0430\u043D
+car.class_sport=\u0421\u043F\u043E\u0440\u0442\u043A\u0430\u0440
+car.class_suv=\u041A\u0440\u043E\u0441\u0441\u043E\u0432\u0435\u0440
+car.class_wagon=\u0423\u043D\u0438\u0432\u0435\u0440\u0441\u0430\u043B
