add properties for car constants

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -61,3 +61,8 @@ car.class_sedan=Sedan
 car.class_sport=Sport
 car.class_suv=SUV
 car.class_wagon=Wagon
+car.engine_petrol=Petrol
+car.engine_diesel=Diesel
+car.engine_gas=Gas
+car.gearbox_automatic=Automatic
+car.gearbox_manual=Manual
