--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -61,3 +61,8 @@ car.class_sedan=\u0421\u0435\u0434\u0430\u043D
 car.class_sport=\u0421\u043F\u043E\u0440\u0442\u043A\u0430\u0440
 car.class_suv=\u041A\u0440\u043E\u0441\u0441\u043E\u0432\u0435\u0440
 car.class_wagon=\u0423\u043D\u0438\u0432\u0435\u0440\u0441\u0430\u043B
+car.engine_petrol=\u0411\u0435\u043D\u0437\u0438\u043D\u043E\u0432\u044B\u0439
+car.engine_diesel=\u0414\u0438\u0437\u0435\u043B\u044C\u043D\u044B\u0439
+car.engine_gas=\u0413\u0430\u0437\u043E\u0432\u044B\u0439
+car.gearbox_automatic=\u0410\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0430\u044F
+car.gearbox_manual=\u0420\u0443\u0447\u043D\u0430\u044F
