--- a/src/main/resources/content_be.properties
+++ b/src/main/resources/content_be.properties
@@ -65,3 +65,9 @@ car.engine_diesel=\u0414\u044B\u0437\u0435\u043B\u044C\u043D\u044B
 car.engine_gas=\u0413\u0430\u0437\u0430\u0432\u044B
 car.gearbox_automatic=\u0410\u045E\u0442\u0430\u043C\u0430\u0442\u044B\u0447\u043D\u0430\u044F
 car.gearbox_manual=\u0420\u0443\u0447\u043D\u0430\u044F
+car.color_black=\u0427\u043E\u0440\u043D\u044B
+car.color_blue=\u0421\u0456\u043D\u0456
+car.color_grey=\u0428\u044D\u0440\u044B
+car.color_red=\u0427\u044B\u0440\u0432\u043E\u043D\u044B
+car.color_white=\u0411\u0435\u043B\u044B
+car.color_yellow=\u0416\u043E\u045E\u0442\u044B
