--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -66,3 +66,9 @@ car.engine_diesel=Diesel
 car.engine_gas=Gas
 car.gearbox_automatic=Automatic
 car.gearbox_manual=Manual
+car.color_black=Black
+car.color_blue=Blue
+car.color_grey=Grey
+car.color_red=Red
+car.color_white=White
+car.color_yellow=Yellow
