--- a/src/main/resources/content_ru.properties
+++ b/src/main/resources/content_ru.properties
@@ -66,3 +66,9 @@ car.engine_diesel=\u0414\u0438\u0437\u0435\u043B\u044C\u043D\u044B\u0439
 car.engine_gas=\u0413\u0430\u0437\u043E\u0432\u044B\u0439
 car.gearbox_automatic=\u0410\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0430\u044F
 car.gearbox_manual=\u0420\u0443\u0447\u043D\u0430\u044F
+car.color_black=\u0427\u0451\u0440\u043D\u044B\u0439
+car.color_blue=\u0421\u0438\u043D\u0438\u0439
+car.color_grey=\u0421\u0435\u0440\u044B\u0439
+car.color_red=\u041A\u0440\u0430\u0441\u043D\u044B\u0439
+car.color_white=\u0411\u0435\u043B\u044B\u0439
+car.color_yellow=\u0416\u0451\u043B\u0442\u044B\u0439
