--- a/src/main/resources/content_be.properties
+++ b/src/main/resources/content_be.properties
@@ -71,3 +71,4 @@ car.color_grey=\u0428\u044D\u0440\u044B
 car.color_red=\u0427\u044B\u0440\u0432\u043E\u043D\u044B
 car.color_white=\u0411\u0435\u043B\u044B
 car.color_yellow=\u0416\u043E\u045E\u0442\u044B
+order.not_available=\u0410\u045E\u0442\u0430\u043C\u0430\u0431\u0456\u043B\u044C \u0437\u0430\u0440\u044D\u0437\u0435\u0440\u0432\u0430\u0432\u0430\u043D\u044B \u043D\u0430
