add property for validation

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -73,3 +73,5 @@ car.color_red=Red
 car.color_white=White
 car.color_yellow=Yellow
 order.not_available=Car is reserved on
+register.validation_message=Invalid data
+editor.error=Something went wrong
