add property for already made order

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -75,3 +75,4 @@ car.color_yellow=Yellow
 order.not_available=Car is reserved on
 register.validation_message=Invalid data
 editor.error=Something went wrong
+order.already_present=Order is already exists
