add property for new order status

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -76,3 +76,4 @@ order.not_available=Car is reserved on
 register.validation_message=Invalid data
 editor.error=Something went wrong
 order.already_present=Order is already exists
+orders.rejected_status=Rejected
