add properties for user orders page

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -77,3 +77,13 @@ register.validation_message=Invalid data
 editor.error=Something went wrong
 order.already_present=Order is already exists
 orders.rejected_status=Rejected
+orders.cancel=Cancel
+orders.approve=Approve
+orders.change_status=Change status
+orders.reject=Reject
+orders.car=Car
+orders.rejection_comment=Rejection comment
+orders.user=User
+orders.return_comment=Return comment
+orders.status=Status
+orders.action=Actions
