add properties for user orders page

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -87,3 +87,6 @@ orders.user=User
 orders.return_comment=Return comment
 orders.status=Status
 orders.action=Actions
+orders.pay=Pay
+orders.rejection_placeholder=Write a comment to the rejection:
+
