add new properties for orders pages

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -97,4 +97,9 @@ orders.total_price=Total price
 payment.invalid_card=Invalid card number
 payment.invalid_expiry=Invalid expiry date
 payment.invalid_cvv=Invalid CVV
+orders.received=Received
+orders.return=Return
+orders.return_placeholder=Write return comment
+order.earlier_than_today=Start date is earlier than todays date
+order.earlier_than_end=Start date is earlier than end date
 
