add properties for new features

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -102,4 +102,6 @@ orders.return=Return
 orders.return_placeholder=Write return comment
 order.earlier_than_today=Start date is earlier than todays date
 order.earlier_than_end=Start date is earlier than end date
+car.find=Find a car
+car.comments=Comments
 
