--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -104,4 +104,7 @@ order.earlier_than_today=Start date is earlier than todays date
 order.earlier_than_end=Start date is earlier than end date
 car.find=Find a car
 car.comments=Comments
+comments.no_comments=No comments
+comments.invalid_content=Invalid content
+comments.write_comment=Write comment
 
