add properties for comments pagination

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -107,4 +107,6 @@ car.comments=Comments
 comments.no_comments=No comments
 comments.invalid_content=Invalid content
 comments.write_comment=Write comment
+comments.next=Next
+comments.previous=Previous
 
