--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -109,4 +109,5 @@ comments.invalid_content=Invalid content
 comments.write_comment=Write comment
 comments.next=Next
 comments.previous=Previous
+orders.leave_comment=Leave comment
 
