add properties for cars page

--- a/src/main/resources/content_en.properties
+++ b/src/main/resources/content_en.properties
@@ -110,4 +110,6 @@ comments.write_comment=Write comment
 comments.next=Next
 comments.previous=Previous
 orders.leave_comment=Leave comment
+cars.nothing_found=Nothing found
+cars.back=Back
 
